finished a lot of fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+
+* {
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 300;
+}
+
 body {
     background-color: wheat;
 }
 
 .App {
-    background-image: url("../src/assets/moon3.jpg");
+    background-image: url("../src/assets/moon5.jpg");
     background-size: cover;
     min-height: 100vh;
 }
 
 h1 {
     color: white;
+}
+
+.x {
+    animation: x 7s linear infinite alternate;
+  }
+  
+  .y {
+    animation: y 5.5s linear infinite alternate;
+  }
+  
+  @keyframes x {
+    100% {
+      transform: translateX( calc(100vw - 20vw) );
+    }
+  }
+  
+  @keyframes y {
+    100% {
+      transform: translateY( calc(100vh - 30vh) );
+    }
+  }
+
+.main-contact {
+    width: 60%;
+    margin: auto
+}
+
+@media (max-width: 750px) {
+    .main-contact {
+        width: 90%;
+    }
 }
