--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -1,57 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
-
-* {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-}
-
-a:link, a:visited {
-    text-decoration: none;
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 .maininfo {
-    min-height: 80vh;
+  min-height: 80vh;
 }
 
 .stack-img {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 .profile {
-    width: 450px;
-    height: 450px;
-    border-radius: 100%;
-    object-fit: cover;
-    object-position: top;
-}
-
-.alien {
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  width: 450px;
+  height: 450px;
+  border-radius: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 .main-box {
-    width: 90% !important;
+  width: 90% !important;
 }
 
 @media (max-width: 1200px) {
-    .profile {
-        width: 600px;
-        height: 350px;
-    }
+  .profile {
+    width: 600px;
+    height: 350px;
+  }
 }
 
 @media (max-width: 750px) {
-    .head-box {
-        width: 100% !important;
-    }
+  .head-box {
+    width: 100% !important;
+  }
 
-    .profile {
-        width: 300px;
-        height: 300px;
-    }
+  .profile {
+    width: 300px;
+    height: 300px;
+  }
 }
