--- a/src/views/Projects.css
+++ b/src/views/Projects.css
@@ -4,7 +4,7 @@
 
 .cards-projects {
   width: 99%;
-  height: auto;
+  height: 500px !important;
 }
 
 .cards-img:hover {
@@ -15,6 +15,9 @@
 .cards-img {
   transform: scale(1.0);
   transition: 0.2s;
+  width: 100% !important;
+  height: 180px !important;
+  object-fit: cover;
 }
 
 @media (max-width: 750px) {
